@@ -2,12 +2,10 @@ package cn.oyzh.fx.gui.font;
 
 import cn.oyzh.common.util.StringUtil;
 import cn.oyzh.fx.gui.text.field.SelectTextFiled;
-import cn.oyzh.fx.plus.menu.FXContextMenu;
+import cn.oyzh.fx.plus.font.FontUtil;
 import cn.oyzh.i18n.I18nHelper;
-import javafx.scene.text.Font;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 字体类型输入框，可搜索
@@ -17,47 +15,27 @@ import java.util.stream.Collectors;
  */
 public class FontFamilyTextField extends SelectTextFiled<String> {
 
-    {
-        // 覆盖默认菜单
-        this.setContextMenu(FXContextMenu.EMPTY);
-        this.setTipText(I18nHelper.pleaseSelectFont());
+    @Override
+    protected FontFamilyTextFieldSkin createDefaultSkin() {
+        return new FontFamilyTextFieldSkin(this);
     }
 
-    // @Override
-    // public FontFamilyTextFieldSkin skin() {
-    //     return (FontFamilyTextFieldSkin) super.skin();
-    // }
-    //
-    // @Override
-    // protected FontFamilyTextFieldSkin createDefaultSkin() {
-    //     if (this.getSkin() != null) {
-    //         return (FontFamilyTextFieldSkin) this.getSkin();
-    //     }
-    //     return new FontFamilyTextFieldSkin(this);
-    // }
-
     @Override
-    protected void onTextChanged(String newValue) {
-        if (!this.isFocused()) {
-            return;
+    protected boolean onTextChanged(String newValue) {
+        if (!super.onTextChanged(newValue)) {
+            return false;
         }
-        if (this.skin().isTexting()) {
-            this.skin().clearTexting();
-            return;
-        }
-        List<String> fonts = Font.getFamilies();
-        // 移除选区
-        this.skin().clearSelection();
+        List<String> fonts = FontUtil.getFamilies();
         // 隐藏弹窗
         if (StringUtil.isBlank(newValue)) {
             this.setItemList(fonts);
             this.skin().hidePopup();
-            return;
+            return false;
         }
         // 过滤内容
         List<String> newList = fonts.stream()
                 .filter(t -> StringUtil.containsIgnoreCase(t, newValue))
-                .collect(Collectors.toList());
+                .toList();
         // 设置内容
         this.setItemList(newList);
         // 内容为空，隐藏弹窗
@@ -66,11 +44,15 @@ public class FontFamilyTextField extends SelectTextFiled<String> {
         } else {
             this.skin().showPopup();
         }
+        return true;
     }
 
     @Override
     public void initNode() {
+        // 覆盖默认菜单
+        //this.setContextMenu(FXContextMenu.EMPTY);
+        this.setTipText(I18nHelper.pleaseSelectFont());
+        this.setItemList(FontUtil.getFamilies());
         super.initNode();
-        this.setItemList(Font.getFamilies());
     }
 }
